tests/core/faulty_list_index_assign.sy
Q :: blob {
    a : [int],
}

start :: fn do
    a :: [1]
    a[0] = "fail"
    q :: Q { a: [4] }
    q.a[0] = "fail"
end
// error: $MissmatchAssign { got: Type::String, expected: Type::Int }
// error: $MissmatchAssign { got: Type::String, expected: Type::Int }
